# MolSim

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build-ci.yml  ci.yml  cmake-single-platform.yml  test-ci.yml
benchmark/: CalculatorLJBenchmark.cpp  ParicleContainerBenchmark.cpp
cmake/modules/: doxygen.cmake
resources/: input-cuboid-cell.txt  input-cuboid.txt  input-cuboid.xml  input-disc.txt  input-disc.xml  input-sun.txt
scripts/: plot_LJ_benchmarks.R  plot_benchmarks.R
src/: Calculator.cpp  Calculator.h  FileReader.cpp  FileReader.h  Main.cpp  MolSim.cpp  MolSim.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h
src/Boundaries/: BoundaryController.cpp  BoundaryController.h  BoundaryEnums.h  BoundaryHandler2D.cpp  BoundaryHandler2D.h  BoundaryParameters.h  BoundaryProperties.h
src/boundaries/: BoundaryController.cpp  BoundaryController.h  BoundaryEnums.h  BoundaryHandler.cpp  BoundaryHandler.h  BoundaryProperties.h
src/calculators/: Calculator.h  DummyCalculator.cpp  DummyCalculator.h  LCCalculator.cpp  LCCalculator.h  LC_LJCalculator.cpp  LC_LJCalculator.h  LJCalculator.cpp  LJCalculator.h  SVCalculator.cpp  SVCalculator.h  Thermostat.cpp  Thermostat.h
src/io/: FileReader.cpp  FileReader.h
src/io/in/: CuboidParameters.h  FileReader.cpp  FileReader.h  ParticleGenerator.cpp  ParticleGenerator.h  ParticleParameters.h  TXTReader.cpp  TXTReader.h  XMLReader.cpp  XMLReader.h  input_schema.cxx  input_schema.hxx  input_schema.xsd
src/io/in/parameters/: BoundaryParameters.h  CuboidParameters.h  DiscParameters.h  FileWriterParameters.h  LinkedCellsParameters.h  SimulationDataContainer.h  SimulationParameters.h  ThermostatParameters.h
src/io/in/resources/: SimulationInputSpec.cxx  SimulationInputSpec.hxx  SimulationInputSpec.xsd
src/objects/: Cell.cpp  Cell.h  LinkedCellContainer.cpp  LinkedCellContainer.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h
src/outputWriter/: VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h
src/outputWriters/: OutputWriter.h  VTKWriter.cpp  VTKWriter.h  XYZWriter.h
src/test/: CalculatorTest.cpp  CalculatorTest.h  LJCalculatorTest.cpp  LJCalculatorTest.h
src/utils/: ArrayUtils.h  MaxwellBoltzmannDistribution.cpp  MaxwellBoltzmannDistribution.h
test/: AdditionTest.cpp  CalculatorTest.cpp  ParticleContainerTest.cpp
test/calculators/: CalculatorTest.cpp  LJCalculatorTest.cpp  SVCalculatorTest.cpp
test/objects/: ParticleContainerTest.cpp
tests/: CMakeLists.txt
tests/boundaries/: BoundaryHandlerTest.cpp
tests/calculators/: CalculatorTest.cpp  LC_LJCalculatorTest.cpp  LJCalculatorTest.cpp  SVCalculatorTest.cpp  ThermostatTest.cpp
tests/io/in/: FileReaderTest.cpp  ParticleGeneratorTest.cpp  TXTReaderTest.cpp  XMLReaderTest.cpp  XMLReaderTest.xml  XMLReaderTestCuboid.xml  XMLReaderTestLC.xml  XMLReaderTestLCCuboid.xml  XMLReaderTestLCDisc.xml
tests/objects/: LinkedCellContainerTest.cpp  ParticleContainerTest.cpp  ParticleTest.cpp
